--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     text-align: left;
+    background-color: rgb(224, 220, 220);
 }
 
 .container-content {
